# file_database

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
benchmarking/: CMakeLists.txt  benchmark.cpp
console/: CMakeLists.txt  main.cpp
database_tests/: CMakeLists.txt  database_tests.cpp
database_updater/: CMakeLists.txt  main.cpp
includes/: database.h  test_struct.h  updater.h
