cmake_minimum_required(VERSION 3.20)

project(database)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
option(BENCHMARK "on or off" ON)
option(TEST "on or off" ON)
option(BUILDUPDATER "on or off" ON)

include_directories(includes)
add_subdirectory(third_party)
if (${BENCHMARK})
	add_subdirectory(benchmarking)
endif()
if (${TEST})
	enable_testing()
	add_subdirectory(database_tests)
endif()
add_subdirectory(console)
if (${BUILDUPDATER})
	add_subdirectory(database_updater)
endif()

